# mpc-sigs

./: Cargo.toml  build.rs
proto/: meesign.proto
src/: c_api.rs  cert.rs  context.rs  gg18.rs  lib.rs  protocol.rs  test_ffi.rs
src/protocols/: gg18.rs
