[package]
name = "mpc-sigs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mpecdsa = { git = "https://github.com/jirigav/mpecdsa.git" }
prost = "0.9.0"

[build-dependencies]
cbindgen = "0.20.0"
prost-build = "0.9.0"
